# RaylibStarter

./: .gitignore  Build.bat  CMakeLists.txt  README.md
include/: Game.h
src/: Game.cpp  main.cpp
src/include/: Game.h
tests/: test_main.cpp
